# os_labs

./: .gitignore  docker-compose.yml  pom.xml
colloc/N1_factorial/N1_factorial/: CMakeLists.txt  N1_factorial.cpp  N1_factorial.h  main.cpp  tests.cpp
colloc/N2_duplicates/N2_duplicates/: CMakeLists.txt  N2_duplicates.cpp  N2_duplicates.h  main.cpp  tests.cpp
colloc/N3_linkedlist/N3_linkedlist/: CMakeLists.txt  N3_linkedlist.cpp  N3_linkedlist.h  main.cpp  tests.cpp
lab1/: Creator.cpp  Main.cpp  Reporter.cpp  UnitTest1.cpp  emp.h  pch.h
lab1CMake/: CMakeLists.txt
lab1CMake/lab1cmake/: CMakeLists.txt  Creator.cpp  Main.cpp  Reporter.cpp  employee.h  functions.cpp  functions.h  tests.cpp
lab1_standart17/lab1_standart17/: CMakeLists.txt  Creator.cpp  Main.cpp  Reporter.cpp  employee.h  functions.cpp  functions.h  tests.cpp
lab2/: Array.cpp  Array.h  CMakeLists.txt  main.cpp  tests.cpp  threads.cpp  threads.h
lab3/lab3/: CMakeLists.txt  README.md  main.cpp  marker_system.cpp  marker_system.h  tests.cpp
lab4/lab4/: CMakeLists.txt  README.md  main_receiver.cpp  main_sender.cpp  message_queue.cpp  message_queue.h  receiver.cpp  receiver.h  sender.cpp  sender.h  tests.cpp
lab5/lab5/: CMakeLists.txt  README.md  client.cpp  common.h  server.cpp  tests.cpp
src/main/java/org/example/: LoggingAspect.java  MessageListener.java  README.md  RabbitConfig.java  RateLimitFilter.java  SecurityConfig.java  Task.java  TaskController.java  TaskRepository.java  TaskService.java  TodoApplication.java
src/main/resources/: application-test.yml  application.yml
src/test/java/org/example/: InfrastructureAndDomainTest.java  TaskControllerTest.java  TaskServiceTest.java
